# RobotArm

./: .gitignore  CMakeLists.txt  main.cpp
RobotArm/: RobotArm.vcxproj  RobotArm.vcxproj.filters  adams_end.txt  adams_end_ik_input.txt  adams_q_ik_output.txt  hj_inverse_kinematics_result.txt  hj_kinematics_result.txt  inverse_kinematics_input_end.txt  inverse_kinematics_input_end1.txt  inverse_kinematics_output_q.txt  kinematics_input_q.txt  kinematics_output_end.txt  main.cpp  numerical.cpp  numerical.h  plotting.m  q1_sp.txt  q2_sp.txt  q3_sp.txt  q4_sp.txt  q5_sp.txt  q6_sp.txt  q_input.txt  robotarm.cpp  robotarm.h  trans_mat.m
data/: hj_inverse_kinematics_result.txt  hj_kinematics_result.txt  inverse_kinematics_input_end1.txt  inverse_kinematics_input_end2.txt  inverse_kinematics_input_end3.txt  inverse_kinematics_input_end4.txt  inverse_kinematics_input_end5.txt  inverse_kinematics_input_end_pick.txt  inverse_kinematics_output_q1.txt  inverse_kinematics_output_q2.txt  inverse_kinematics_output_q3.txt  inverse_kinematics_output_q4.txt  inverse_kinematics_output_q5.txt  inverse_kinematics_output_q_pick.txt  kinematics_input_q.txt  kinematics_output_end.txt
include/: numerical.h  robotarm.h
src/: numerical.cpp  robotarm.cpp
